2013-07-12  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/interp/Makefile.in: cleanup all-axiomsys and all-interpsys
	dependencies

2013-07-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matcat.spad.pamphlet,
	src/algebra/mama.spad.pamphlet,
	src/algebra/array2.spad.pamphlet: Generalize array
	operations.

2013-07-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp,  src/interp/lisplib.boot:
	Eliminate version check.

2013-07-09  Ralf Hemmecke  <ralf@hemmecke.org>

	* Makefile.in, config/var-def.mk, configure.ac,
	src/algebra/Makefile.in, src/doc/Makefile.in, src/etc/Makefile.in,
	doc/README.dist: make dist and use pregenerated files

2013-07-09  Ralf Hemmecke  <ralf@hemmecke.org>

	* configure.ac, Makefile.in, src/Makefile.in,
	src/algebra/Makefile.in, src/doc/Makefile.in,
	src/etc/spadedit.pamphlet, src/hyper/Makefile.in, src/doc/*:
	re-establish HyperDoc content from .htex sources

2013-07-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/trace.boot
	src/interp/vmlisp.lisp, src/interp/setvars.boot
	src/interp/debug.lisp, src/interp/Makefile.in:
	Convert a few tracing functions to Boot.

2013-07-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/trace.boot,
	src/interp/macros.lisp, src/interp/lisplib.boot,
	src/interp/ncomp.boot: Misc cleanups.

2013-07-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-spec2.boot: Allow calling Lisp
	macros from interpreter.

2013-07-03  Ralf Hemmecke <ralf@hemmecke.org>

	* configure.ac: Remove unused AUTO_GOOD_SHELL.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet: Add more operators.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-map.boot: Avoid exponential time in
	'mapRecurDepth'.

2013-06-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet,
	src/algebra/intef.spad.pamphlet: Rename 'limitedint'