@@ -1,5 +1,11 @@
 2013-07-12  Ralf Hemmecke  <ralf@hemmecke.org>
 
+	* Makefile.in, src/interp/Makefile.in, src/interp/msgdb.boot,
+	src/interp/setq.lisp, src/interp/util.lisp: replace timestamp code
+	by `date`
+
+2013-07-12  Ralf Hemmecke  <ralf@hemmecke.org>
+
 	* src/interp/Makefile.in: cleanup all-axiomsys and all-interpsys
 	dependencies
 
